// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component isDisabled 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="l24a3g-13uhtwo l24a3g-1j1xgf6"
            dir="auto"
          >
            (Selected: 1)
          </div>
          <div
            aria-disabled={true}
            aria-label="Checkbox Group"
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1arejsr-1mdhnmt 1arejsr-1ebsp7h 1arejsr-r3q1zx"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={true}
                  disabled={true}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1xvqsbg-1jvh2c 1xvqsbg-1hkypfz 1xvqsbg-11wy4tg bwxc0z-ygf2ke"
                dir={null}
              >
                <svg
                  data-style="16ccdma-i3qx1q 16ccdma-mf2bik 16ccdma-11wy4tg fuoo2i-1q64x7k"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                      fill="currentColor"
                      stroke=""
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm a38rug-314322 a38rug-11wy4tg"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1arejsr-1mdhnmt 1arejsr-1ebsp7h 1arejsr-r3q1zx"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={true}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1xvqsbg-1jvh2c 1xvqsbg-11wy4tg bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm a38rug-11wy4tg"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component isInvalid 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="l24a3g-13uhtwo l24a3g-1j1xgf6"
            dir="auto"
          >
            (Selected: 1)
          </div>
          <div
            aria-label="Checkbox Group"
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1arejsr-1mdhnmt 1arejsr-1ebsp7h"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={true}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1xvqsbg-1jvh2c 1xvqsbg-1hkypfz 1xvqsbg-zjvgbf bwxc0z-ygf2ke"
                dir={null}
              >
                <svg
                  data-style="16ccdma-i3qx1q 16ccdma-mf2bik fuoo2i-1q64x7k"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                      fill="currentColor"
                      stroke=""
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm a38rug-314322"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1arejsr-1mdhnmt 1arejsr-1ebsp7h"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1xvqsbg-1jvh2c 1xvqsbg-zjvgbf bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component isReadOnly 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="l24a3g-13uhtwo l24a3g-1j1xgf6"
            dir="auto"
          >
            (Selected: 1)
          </div>
          <div
            aria-label="Checkbox Group"
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1arejsr-1mdhnmt 1arejsr-1ebsp7h"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  aria-readonly={true}
                  checked={true}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1xvqsbg-1jvh2c 1xvqsbg-1hkypfz bwxc0z-ygf2ke"
                dir={null}
              >
                <svg
                  data-style="16ccdma-i3qx1q 16ccdma-mf2bik fuoo2i-1q64x7k"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                      fill="currentColor"
                      stroke=""
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm a38rug-314322"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1arejsr-1mdhnmt 1arejsr-1ebsp7h"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  aria-readonly={true}
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1xvqsbg-1jvh2c bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component size lg 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="l24a3g-13uhtwo l24a3g-1j1xgf6"
            dir="auto"
          >
            (Selected: 1)
          </div>
          <div
            aria-label="Checkbox Group"
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1arejsr-1mdhnmt 1arejsr-ksaz4x"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={true}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1xvqsbg-1jvh2c 1xvqsbg-1hkypfz 1arejsr-1tbck4z bwxc0z-ygf2ke"
                dir={null}
              >
                <svg
                  data-style="16ccdma-i3qx1q 16ccdma-mf2bik 1arejsr-wnd9tc fuoo2i-1q64x7k 1arejsr-wnd9tc"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                      fill="currentColor"
                      stroke=""
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm a38rug-314322 1arejsr-16we7vb"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1arejsr-1mdhnmt 1arejsr-ksaz4x"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1xvqsbg-1jvh2c 1arejsr-1tbck4z bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm 1arejsr-16we7vb"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component size md 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="l24a3g-13uhtwo l24a3g-1j1xgf6"
            dir="auto"
          >
            (Selected: 1)
          </div>
          <div
            aria-label="Checkbox Group"
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1arejsr-1mdhnmt 1arejsr-1ebsp7h"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={true}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1xvqsbg-1jvh2c 1xvqsbg-1hkypfz 1arejsr-10d27qj bwxc0z-ygf2ke"
                dir={null}
              >
                <svg
                  data-style="16ccdma-i3qx1q 16ccdma-mf2bik 1arejsr-lfqm4y fuoo2i-1q64x7k 1arejsr-lfqm4y"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                      fill="currentColor"
                      stroke=""
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm a38rug-314322 1arejsr-11hczkh"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1arejsr-1mdhnmt 1arejsr-1ebsp7h"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1xvqsbg-1jvh2c 1arejsr-10d27qj bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm 1arejsr-11hczkh"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox component size sm 1`] = `
<div
  className="css-view-175oi2r"
  data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="1t4guam-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-text-1rynq56"
            data-style="l24a3g-13uhtwo l24a3g-1j1xgf6"
            dir="auto"
          >
            (Selected: 1)
          </div>
          <div
            aria-label="Checkbox Group"
            className="css-view-175oi2r"
            data-style="896xuz-1q64x7k"
            dir={null}
            id="checkbox-group"
            role="group"
          >
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1arejsr-1mdhnmt 1arejsr-1ksor04"
              dir={null}
              id="checkbox-1"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 1"
                  checked={true}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 1"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1xvqsbg-1jvh2c 1xvqsbg-1hkypfz 1arejsr-1rh3r0r bwxc0z-ygf2ke"
                dir={null}
              >
                <svg
                  data-style="16ccdma-i3qx1q 16ccdma-mf2bik 1arejsr-14om591 fuoo2i-1q64x7k 1arejsr-14om591"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M8.53115 15.1856L3.96198 10.744L2 12.6512L8.53115 19L22 5.9072L20.038 4L8.53115 15.1856Z"
                      fill="currentColor"
                      stroke=""
                    />
                  </g>
                </svg>
              </div>
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm a38rug-314322 1arejsr-1q2dyj6"
                dir="auto"
              >
                Label 1
              </div>
            </label>
            <label
              aria-label="Checkbox"
              className="css-view-175oi2r"
              data-style="1arejsr-1mdhnmt 1arejsr-1ksor04"
              dir={null}
              id="checkbox-2"
            >
              <div
                onBlur={null}
                onFocus={null}
                style={
                  {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <input
                  aria-label="Label 2"
                  checked={false}
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="checkbox"
                  value="Label 2"
                />
              </div>
              <div
                className="css-view-175oi2r"
                data-style="1xvqsbg-1jvh2c 1arejsr-1rh3r0r bwxc0z-ygf2ke"
                dir={null}
              />
              <div
                className="css-text-1rynq56"
                data-style="a38rug-q863cm 1arejsr-1q2dyj6"
                dir="auto"
              >
                Label 2
              </div>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
